Merge with changes in R4MeasureDefBuilder.  Tweak a couple of tests.  Still several test failures.